# unsw

./: .gitignore
COMP4418/: CMakeLists.txt  ass1q1.txt  ass1q2.txt  ass1q3report.txt  assn1.odt  main.cpp  rule.cpp  rule.h  searchTree.cpp  searchTree.h  sequent.cpp  sequent.h  utils.cpp  utils.h
COMP4418/ass1/: CMakeLists.txt  ass1q1.txt  ass1q2.txt  ass1q4.txt  assn1.odt  main.cpp  searchTree.cpp  sequent.cpp  sequent.h  utils.h
COMP4418/ass2/: assn2.odt  coloring.lp  feedback.lp  graph.lp  independent.lp  petersen.lp  question3.txt
COMP6452/: COMP6452.code-workspace
COMP6452/ass1/: package-lock.json  package.json  truffle-config.js
COMP6452/ass2/: WhichIsBetter.docx  atams.xlsx  discussion.txt  private_blockchain.drawio  public_blockchain.drawio
COMP6452/message/: compile.js  deploy.js  package-lock.json  package.json
COMP9021/: pieces_C.xml  pieces_b.xml  tangram.py
COMP9021/Assignment_1/: factorial_base.py  frames_2.txt  highest_scoring_words.py  perimeter.py  rubiks_rectangle.py
COMP9021/Assignment_2/: tangram.py  tangramv1.py
COMP9021/Assignment_3/: ring.py  tangram_A_1_a.xml  tangram_C.xml  test.xml
COMP9021/Quiz/: binary_tree.py  extended_linked_list.py  quiz_1.py  quiz_10.py  quiz_2.py  quiz_3.py  quiz_4.py  quiz_5.py  quiz_6.py  quiz_8.py  quiz_9.py
COMP9024/.metadata/: version.ini
COMP9024/CompactCompressedSuffixTrie/: .project  file1.txt  file2.txt
COMP9024/assignment_2/: ExtendedAVLTree.java
COMP9024/assignment_3/: BucketSort.java  TaskScheduler.java
COMP9024/assignment_4/: CompactCompressedSuffixTrie.java
COMP9315/: email.c  email.source
COMP9319/: README.txt  huffman  huffman.1.cpp  huffman.cpp  makefile  test  test.cpp
COMP9417/: GA notes.txt  README.txt  labels.txt  test.txt
(+185 files in other folders)
